testsuite/poke.pkl/mul-diag-2.pk
/* { dg-do compile } */

var s = 3#B
        * "bar"; /* { dg-error "invalid operand.*\n.*expected integral" } */
